sonar adjustments